--- a/css/styles.css
+++ b/css/styles.css
@@ -615,9 +615,17 @@ img {
 /* Button */
 
 .all-button:hover,
-.all-button:focus,
+.all-button:focus {
+    background: #2196F3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    outline: 2px solid var(--accent-color);
+}
+
 .button:hover,
 .button:focus {
+    cursor: pointer;
     color: var(--accent-color);
     outline: 2px solid var(--accent-color);
 }
