--- a/css/styles.css
+++ b/css/styles.css
@@ -155,11 +155,15 @@ img {
 
 .header-icon {
     margin-right: 10px;
+    fill: currentColor;
 
 }
 
-.header-icon:hover {
+.header-icon:hover,
+.header-icon:focus {
     fill: var(--accent-color);
+
+
 }
 
 /* a */
@@ -174,7 +178,7 @@ img {
     font-size: 14px;
     line-height: calc(16/14);
     letter-spacing: 0.02em;
-    color: var(--accent-color)
+    color: var(--primary-text-color)
 }
 
 /* a */
@@ -193,7 +197,8 @@ img {
     color: var(--primary-text-color)
 }
 
-.header-logo:hover,
+.header-portfolio:hover,
+.header-portfolio:focus .header-logo:hover,
 .header-logo:focus,
 .header-contact:hover,
 .header-contact:focus,
@@ -377,6 +382,7 @@ img {
 .img-team {
     display: flex;
     gap: 30px;
+    margin-bottom: 30px;
 }
 
 /* DIV */
@@ -420,19 +426,20 @@ img {
     border-radius: 50%;
 }
 
-.team-link:hover {
+.team-link:hover,
+.team-link:focus {
     background-color: #2196F3;
+    cursor: pointer;
 }
 
 .social-link {
     display: flex;
     fill: #AFB1B8;
-    cursor: pointer;
 }
 
 .social-link:hover,
 .social-link:focus {
-    fill: #ffffff;
+    fill: #FFFFFF;
 }
 
 /* clients */
@@ -444,6 +451,7 @@ img {
 .clients {
     display: block;
     margin-top: 0;
+    margin-bottom: 50px;
     text-align: center;
     font-weight: 700;
     font-size: 36px;
@@ -458,25 +466,32 @@ img {
 }
 
 .clients-thumb {
-    outline: 1px solid #AFB1B8;
     padding: 16px 32px;
-    margin-top: 50px;
     border-radius: 4px;
+    border-top: solid 1px;
+    border-right: solid #AFB1B8 1px;
+    border-bottom: solid #AFB1B8 1px;
+    border-left: solid #AFB1B8 1px;
+
 }
 
 .clients-thumb:hover,
 .clients-thumb:focus {
-    outline: 1px solid var(--accent-color);
-}
-
-.clients-icon {
-    fill: #AFB1B8;
     cursor: pointer;
+    border-color: var(--accent-color);
 }
 
-.clients-icon:hover,
-.clients-icon:focus {
+.clients-link {
+    color: #AFB1B8;
+    fill: currentColor;
+    border-color: #AFB1B8;
+}
+
+.clients-link:hover,
+.clients-link:focus {
     fill: var(--accent-color);
+    cursor: pointer;
+
 }
 
 /* footer */
@@ -498,13 +513,6 @@ img {
     width: 1200px;
 }
 
-.footer-tumb {
-    display: block;
-    margin-left: 70px;
-
-}
-
-
 .footer-logo {
     display: block;
     margin-bottom: 20px;
@@ -524,14 +532,6 @@ img {
     line-height: calc(16/26);
     letter-spacing: 0.03em;
     color: var(--light-bg-cl);
-}
-
-
-.footer-link {
-    display: flex;
-    flex-direction: column;
-    gap: 9px;
-    margin-top: 0;
 }
 
 .footer-addres {
@@ -580,7 +580,17 @@ img {
     color: var(--light-bg-cl);
 }
 
+.footer-tumb {
+    margin-left: 70px;
 
+}
+
+.footer-link {
+    display: inline-flex;
+    flex-direction: column;
+    gap: 9px;
+    margin-top: 0;
+}
 
 /* portfolio.html */
 
