--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,7 @@ img {
 }
 
 .team-item {
-    margin-bottom: 0;
+    margin-bottom: 16px;
     font-size: 16px;
     line-height: calc(19/16);
     text-align: center;
@@ -421,26 +421,24 @@ img {
 
 .team-link {
     display: inline-flex;
-    margin-top: 16px;
     padding: 12px;
     border-radius: 50%;
+    fill: currentColor;
+    fill: #AFB1B8;
 }
 
 .team-link:hover,
 .team-link:focus {
+    fill: #FFFFFF;
     background-color: #2196F3;
     cursor: pointer;
 }
 
 .social-link {
     display: flex;
-    fill: #AFB1B8;
+
 }
 
-.social-link:hover,
-.social-link:focus {
-    fill: #FFFFFF;
-}
 
 /* clients */
 .section-clients {
@@ -466,6 +464,9 @@ img {
 }
 
 .clients-thumb {
+
+    width: 170px;
+    height: 92px;
     padding: 16px 32px;
     border-radius: 4px;
     border-top: solid 1px;
@@ -477,22 +478,26 @@ img {
 
 .clients-thumb:hover,
 .clients-thumb:focus {
-    cursor: pointer;
     border-color: var(--accent-color);
 }
 
 .clients-link {
-    color: #AFB1B8;
     fill: currentColor;
-    border-color: #AFB1B8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: #AFB1B8;
 }
 
 .clients-link:hover,
 .clients-link:focus {
     fill: var(--accent-color);
     cursor: pointer;
-
 }
+
+
 
 /* footer */
 .footer {
@@ -504,6 +509,7 @@ img {
 
 .footer-container {
     display: flex;
+    align-items: baseline;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0px;
@@ -572,6 +578,7 @@ img {
 
 .footer-title {
     display: block;
+    margin-bottom: 20px;
     font-family: inherit;
     font-weight: 700;
     font-size: 14px;
