--- a/css/styles.css
+++ b/css/styles.css
@@ -463,26 +463,18 @@ img {
     gap: 30px;
 }
 
+/* li */
 .clients-thumb {
-
     width: 170px;
     height: 92px;
     padding: 16px 32px;
-    border-radius: 4px;
-    border-top: solid 1px;
-    border-right: solid #AFB1B8 1px;
-    border-bottom: solid #AFB1B8 1px;
-    border-left: solid #AFB1B8 1px;
-
 }
 
-.clients-thumb:hover,
-.clients-thumb:focus {
-    border-color: var(--accent-color);
-}
-
+/* a */
 .clients-link {
     fill: currentColor;
+    border-radius: 4px;
+    border: 1px solid #AFB1B8;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -493,10 +485,16 @@ img {
 
 .clients-link:hover,
 .clients-link:focus {
-    fill: var(--accent-color);
+    color: var(--accent-color);
+    border-color: var(--accent-color);
     cursor: pointer;
 }
 
+/* svg */
+.clients-icon {
+    fill: currentColor;
+    border-color: #AFB1B8;
+}
 
 
 /* footer */
@@ -540,13 +538,20 @@ img {
     color: var(--light-bg-cl);
 }
 
+.footer-link {
+    display: inline-flex;
+    flex-direction: column;
+    gap: 9px;
+    margin-top: 0;
+}
+
 .footer-addres {
     text-decoration: none;
     font-style: normal;
     font-size: 14px;
     line-height: calc(24/14);
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
+    color: var(--light-bg-cl);
 }
 
 .footer-mail {
@@ -577,8 +582,10 @@ img {
 }
 
 .footer-title {
+    margin-left: 70px;
     display: block;
     margin-bottom: 20px;
+    text-transform: uppercase;
     font-family: inherit;
     font-weight: 700;
     font-size: 14px;
@@ -587,16 +594,39 @@ img {
     color: var(--light-bg-cl);
 }
 
-.footer-tumb {
+/* ul */
+.footer-soclist {
+    display: flex;
     margin-left: 70px;
+    gap: 10px;
 
 }
 
-.footer-link {
+/* li */
+.footer-tumb {}
+
+/* a */
+.footersoc-link {
+    fill: currentColor;
+    color: #FFFFFF;
     display: inline-flex;
-    flex-direction: column;
-    gap: 9px;
-    margin-top: 0;
+    padding: 12px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    ;
+}
+
+.footersoc-link:hover,
+.footersoc-link:focus {
+    color: var(--light-bg-cl);
+    background-color: var(--accent-color);
+    cursor: pointer;
+}
+
+/* svg */
+.footer-icon {
+    fill: currentColor;
+
 }
 
 /* portfolio.html */
@@ -683,7 +713,6 @@ img {
 .portfolio-btn {
     display: flex;
     gap: 8px;
-    padding-top: 174px;
     margin-bottom: 50px;
     justify-content: center;
     outline-style: none;
@@ -695,6 +724,7 @@ img {
 }
 
 .portfolio-card {
+
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -702,7 +732,13 @@ img {
 
 }
 
-.first-card:hover {
+.portfolio-link {
+    display: block;
+    text-decoration: none;
+}
+
+.portfolio-link:hover,
+.portfolio-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -714,4 +750,8 @@ img {
     border-bottom: solid #EEEEEE 1px;
     border-left: solid #EEEEEE 1px;
 
+}
+
+.portfolio-item {
+    text-decoration: none;
 }
